manifest/wordpress/wordpress.db.yaml
---
# db
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gwdc-db
  namespace: gwdc
  labels:
    app: gwdc
    role: database
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gwdc
        role: database
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - name: port-mysql
          containerPort: 3306
        volumeMounts:
          - name: nfs-test
            mountPath: "/var/lib/mysql"
      volumes:
      - name: nfs-test
        persistentVolumeClaim:
          claimName: nfs-pvc
---
# mysql service
apiVersion: v1
kind: Service
metadata:
  name: gwdc-db
  namespace: gwdc
spec:
  ports:
  - name: gwdc-db
    port: 3306
    targetPort: 3306
  selector:
    app: gwdc
    role: database
...
