manifest/wordpress/wordpress.service.app.yaml
---
# wordpress
apiVersion: v1
kind: Service
metadata:
  namespace: gwdc
  name: gwdc-web
spec:
  type: NodePort
  ports:
  - name: webui
    port: 80
    targetPort: 80
    nodePort: 30662
  selector:
    app: gwdc
    role: web
