manifest/wordpress/wordpress.ingress.yaml
---
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gwdc-ing
  namespace: gwdc
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: gwdc.org.au
    http:
      paths:
      - path: /
        backend:
          serviceName: gwdc-web
          servicePort: 80
...
